Add support for configuring cpu affinity

--- a/rtset.conf
+++ b/rtset.conf
@@ -1,6 +1,6 @@
 # Associate processes with RT priorities.
 #
-# Format is <pattern>:<prio>
+# Format is <pattern>:<prio>:<affinity>
 #
 # pattern is matched against "ps -eo cmd"
 #
@@ -9,7 +9,7 @@
 #
 # Examples:
 #
-#     \[migration\/.*\]:99
-#     \[watchdog\/.*\]:99
-#     \[irq\/.*-foo\]:50
+#     \[migration\/.*\]:99:0xff
+#     \[watchdog\/.*\]:99:0xff
+#     \[irq\/.*-foo\]:50:0xff
 #
