Configure by threads instead of by process

--- a/rtset.conf
+++ b/rtset.conf
@@ -1,11 +1,11 @@
-# Associate processes with RT priorities.
+# Associate threads with RT priorities.
 #
 # Format is <pattern>:<prio>:<affinity>
 #
-# pattern is matched against "ps -eo cmd"
+# pattern is matched against "ps -eLo comm"
 #
-# If a process name matches against more than one rule, the priority will be
-# set by the last matching rule.
+# If a thread name matches against more than one rule, the priority will be set
+# by the last matching rule.
 #
 # Examples:
 #
