--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,8 @@
-AC_INIT([rtset], 0)
-AM_INIT_AUTOMAKE
-AC_CONFIG_FILES([Makefile])
+AC_INIT([rtset], [1.0.0], [peter@peterlundgren.com])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AC_PROG_CC
+AC_CONFIG_FILES([
+    Makefile
+    src/Makefile
+])
 AC_OUTPUT
